GNOME Bugzilla – Bug 679910
GtkTreeModelFilter: Fix _iter_previous() when iter points at 2nd node
Last modified: 2012-07-17 08:55:11 UTC
Patch attached.
Created attachment 218785 [details] [review] GtkTreeModelFilter: Fix _iter_previous() when iter points at 2nd node GSequence iterators point at the position between two elements so an iterator pointing at the N tree model node is actually between the N-1 and N sequence elements. This means that asking for the previous sequence iterator first and then checking if it is the begin iterator would yeld true for an iterator pointing at the 2nd tree model node and make us return FALSE mistakenly.
Could you also extend the unit tests for test for this? (gtk/tests/filtermodel.c)
Created attachment 218957 [details] [review] tests/filtermodel: Add test for bug 679910 -- (In reply to comment #2) > Could you also extend the unit tests for test for this? > (gtk/tests/filtermodel.c) Sure, here it is.
> Sure, here it is. Thanks!
Pushed to master and gtk-3-4.